--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@next/font": "^13.0.1",
 		"@reduxjs/toolkit": "^1.8.6",
 		"lodash": "^4.17.21",
-		"next": "12.3.1",
+		"next": "^13.0.0",
 		"next-redux-wrapper": "^8.0.0",
-		"react": "18.2.0",
-		"react-dom": "18.2.0",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
 		"react-redux": "^8.0.4",
 		"redux": "^4.2.0",
 		"redux-devtools-extension": "^2.13.9"
@@ -26,7 +27,7 @@
 		"@types/react-dom": "18.0.6",
 		"autoprefixer": "^10.4.12",
 		"eslint": "8.24.0",
-		"eslint-config-next": "12.3.1",
+		"eslint-config-next": "^13.0.0",
 		"postcss": "^8.4.16",
 		"tailwindcss": "^3.1.8",
 		"typescript": "4.8.3"
