--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,9 @@
       ],
       "@utils/*": [
         "./src/utils/*"
+      ],
+      "@images/*": [
+        "./public/images/*"
       ]
     }
   },
