--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"eslint": "8.24.0",
 		"eslint-config-next": "^13.0.0",
 		"postcss": "^8.4.16",
+		"prisma": "^4.5.0",
 		"tailwindcss": "^3.1.8",
 		"typescript": "4.8.3"
 	}
