--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@next/font": "^13.0.1",
+		"@prisma/client": "^4.5.0",
 		"@reduxjs/toolkit": "^1.8.6",
 		"lodash": "^4.17.21",
 		"next": "^13.0.0",
