--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.7.4",
+		"@heroicons/react": "^2.0.13",
+		"@next-auth/prisma-adapter": "^1.0.5",
 		"@next/font": "^13.0.1",
 		"@prisma/client": "^4.5.0",
 		"@reduxjs/toolkit": "^1.8.6",
 		"lodash": "^4.17.21",
 		"next": "^13.0.0",
+		"next-auth": "^4.16.4",
 		"next-redux-wrapper": "^8.0.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
